Do some changers

--- a/DoctorPart2/WebContent/Home.html
+++ b/DoctorPart2/WebContent/Home.html
@@ -70,7 +70,7 @@
       <ul class="nospace btmspace-30 linklist contact">
         <li><i class="fa fa-map-marker"></i>
           <address>
-          Street Name &amp; SLIIT, New Kandy Road, Malabe
+         SLIIT, New Kandy Road, Malabe
           </address>
         </li>
         <li><i class="fa fa-phone"></i> +00 (123) 256 7890</li>
