--- a/DoctorPart2/WebContent/Home.html
+++ b/DoctorPart2/WebContent/Home.html
@@ -14,8 +14,8 @@
       <li><i class="fa fa-phone"></i> +00 (123) 256 7890</li>
       <li><i class="fa fa-envelope-o"></i> heathcare@support.com</li>
       <li><a href="#"><i class="fa fa-lg fa-home"></i></a></li>
-      <li><a href="#" title="Login"><i class="fa fa-lg fa-sign-in"></i></a></li>
-      <li><a href="#" title="Sign Up"><i class="fa fa-lg fa-edit"></i></a></li>
+      <li><a href="logn.html" title="Login"><i class="fa fa-lg fa-sign-in"></i></a></li>
+      <li><a href="sgnup.html" title="Sign Up"><i class="fa fa-lg fa-edit"></i></a></li>
     </ul>
   </div>
 </div>
